[flake8]
ignore = E128,E811,W503,E203
max-line-length = 100

[metadata]
name = insights-results-aggregator-utils
maintainer = Red Hat Inc.

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires = setuptools_scm


[pycodestyle]
max-line-length = 100

[pydocstyle]
ignore = D301, D212, D203

